--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Home Section -->
     <section id="home" class="section active">
         <div class="container">
-            <h1>Welcome to The VILab Group</h1>
+            <h1>Welcome to the VILab Group</h1>
             <p class="intro">Loading...</p>
             
             <div class="highlights">
