add full list via google scholar

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- Publication Section -->
     <section id="publication" class="section">
         <div class="container">
-            <h1>Publications</h1>
+            <h1>Selected Publications</h1>
             <!-- Content loaded from info.json -->
         </div>
     </section>
