change team to people

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
-                <li><a href="#team" class="nav-link">Team</a></li>
+                <li><a href="#team" class="nav-link">People</a></li>
                 <li><a href="#vacancies" class="nav-link">Vacancies</a></li>
                 <li><a href="#publication" class="nav-link">Publications</a></li>
                 <li><a href="#research" class="nav-link">Research</a></li>
@@ -59,35 +59,11 @@
     </section>
 
 
-    <!-- Team Section -->
+    <!-- People Section -->
     <section id="team" class="section">
         <div class="container">
-            <h1>Team</h1>
-            
-            <h2>Faculty</h2>
-            <div class="team-list">
-                <!-- Content loaded from info.json -->
-            </div>
-
-            <h2>PhD Students</h2>
-            <div class="team-list">
-                <!-- Content loaded from info.json -->
-            </div>
-
-            <h2>Masters Students</h2>
-            <div class="team-list">
-                <!-- Content loaded from info.json -->
-            </div>
-
-            <h2>Undergraduate Students</h2>
-            <div class="team-list">
-                <!-- Content loaded from info.json -->
-            </div>
-
-            <h2>Alumni</h2>
-            <div class="alumni-list">
-                <!-- Content loaded from info.json -->
-            </div>
+            <h1>People</h1>
+            <!-- Content loaded from info.json -->
         </div>
     </section>
 
