Photos → Lab Fun , Vacancies → Opening

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
                 <li><a href="#team" class="nav-link">People</a></li>
-                <li><a href="#vacancies" class="nav-link">Vacancies</a></li>
+                <li><a href="#vacancies" class="nav-link">Opening</a></li>
                 <li><a href="#publication" class="nav-link">Publications</a></li>
                 <li><a href="#research" class="nav-link">Research</a></li>
-                <li><a href="#photos" class="nav-link">Photos</a></li>
                 <li><a href="https://github.com/VILab-Drexel" target="_blank" rel="noopener noreferrer" class="nav-link">Software</a></li>
+                <li><a href="#photos" class="nav-link">Lab Fun</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
         </div>
@@ -70,7 +70,7 @@
     <!-- Vacancies Section -->
     <section id="vacancies" class="section">
         <div class="container">
-            <h1>Vacancies</h1>
+            <h1>Opening</h1>
             <p>TBD</p>
             <!-- Content loaded from info.json -->
         </div>
@@ -95,7 +95,7 @@
     <!-- Photos Section -->
     <section id="photos" class="section">
         <div class="container">
-            <h1>Photos</h1>
+            <h1>Lab Fun</h1>
             <p>TBD</p>
         </div>
     </section>
