--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="carousel-inner">
                             <div class="carousel-slide active">
                                 <img src="https://assets.isu.pub/document-structure/250825161046-2573c25ef8ded46d0b456c4696800388/v1/c77ebc130d4e2d6763a7bf29eb3fa700.jpeg" alt="Drexel University Main Building">
-                                <span class="carousel-caption">Drexel University &middot; Philadelphia, PA</span>
+                                <span class="carousel-caption">Drexel University &middot</span>
                             </div>
                             <div class="carousel-slide">
                                 <img src="https://www.bucks.edu/academics/transferplanning/agreements/drexel.png" alt="Drexel University">
@@ -70,11 +70,11 @@
                             </div>
                             <div class="carousel-slide">
                                 <img src="https://res.klook.com/image/upload/fl_lossy.progressive,q_60/Mobile/City/egryl5rowwktik0we245.jpg" alt="Philadelphia City">
-                                <span class="carousel-caption">Philadelphia, PA</span>
+                                <span class="carousel-caption">Philadelphia</span>
                             </div>
                             <div class="carousel-slide">
                                 <img src="https://drexel.edu/~/media/Drexel/Core-Site-Group/Core/Images/studentStories/success/city-south-st-bridge-570.jpg" alt="Philadelphia South Street Bridge">
-                                <span class="carousel-caption">Philadelphia, PA</span>
+                                <span class="carousel-caption">Philadelphia</span>
                             </div>
                         </div>
                         <button class="carousel-btn next-btn" aria-label="Next image">
