--- a/project/idselect/index.html
+++ b/project/idselect/index.html
@@ -91,11 +91,11 @@
 
                 <!-- Links -->
                 <div class="publication-links">
-                    <a class="button is-medium external-link is-disabled" href="#">
+                    <a class="button is-medium external-link is-disabled" href="https://arxiv.org/pdf/2602.18990">
                         <span class="icon"><i class="fas fa-file-pdf"></i></span>
                         <span>Paper</span>
                     </a>
-                    <a class="button is-medium external-link is-disabled" href="#">
+                    <a class="button is-medium external-link is-disabled" href="https://arxiv.org/abs/2602.18990">
                         <span class="icon"><i class="ai ai-arxiv"></i></span>
                         <span>arXiv</span>
                     </a>
@@ -284,3 +284,4 @@
     </script>
 </body>
 </html>
+
