--- a/project/sciibi/index.html
+++ b/project/sciibi/index.html
@@ -107,7 +107,7 @@
                         <span class="icon"><i class="fas fa-file-pdf"></i></span>
                         <span>Paper</span>
                     </a>
-                    <a class="button is-medium external-link is-disabled" href="https://arxiv.org/abs/2602.18466">
+                    <a class="button is-medium external-link" href="https://arxiv.org/abs/2602.18466">
                         <span class="icon"><i class="ai ai-arxiv"></i></span>
                         <span>arXiv</span>
                     </a>
@@ -382,5 +382,6 @@
     </script>
 </body>
 </html>
+
 
 
